Implemented file upload, retrieve and delete features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+amazon.s3.access-key=access-key
+amazon.s3.secret-key=secret-key
+amazon.s3.bucket-name=your-bucket-name
+amazon.s3.region=your-bucket-region
